--- a/docker/webserver/AstroAllies/css/main.css
+++ b/docker/webserver/AstroAllies/css/main.css
@@ -1,13 +1,26 @@
 :root {
 	font-size: small;
 	background-color: var(--bg);
-	color: white;
 	font-family: 'Comfortaa';
 	--animation-time-factor: 1.5;
 	--bg: rgb(0, 0, 21);
+	--fg: rgb(255, 255, 255);
 	--ast-size: 6rem;
 	--ast-color: #e8e8e8;
-	--bg2: #000000bb;
+	--bg2: #000000e4;
+	--bg3: #0000005a;
+	color: var(--fg);
+	
+}
+
+body {
+	cursor: url("../src/default.svg") 0 0, default;
+}
+
+.nosel {
+	-webkit-user-select: none; /* Safari */
+	-ms-user-select: none; /* IE 10 and IE 11 */
+	user-select: none; /* Standard syntax */
 }
 
 .user {
@@ -36,7 +49,7 @@
 	padding: 5rem;
 	border-radius: 5rem;
 	background-color: var(--bg2);
-	border: solid 0.5rem;
+	border: solid 0.5rem var(--fg);
 	/* border: solid red; */
 }
 
@@ -50,8 +63,18 @@
 	margin-bottom: 5rem;
 	/* border: solid red; */
 }
+.subtitle {
+	font-size: 5rem;
+	left: 0px;
+	right: 0px;
+	margin: auto;
+	width: fit-content;
+	font-weight: bolder;
+	margin-bottom: 2rem;
+	/* border: solid red; */
+}
 
-.link {
+.element {
 	left: 0px;
 	right: 0px;
 	margin: auto;
@@ -59,23 +82,85 @@
 	margin-top: 2rem;
 }
 
-.link a {
-	color: white;
-	text-decoration: none;
+.element, .element a {
+	color: var(--fg);
 	font-size: 4rem;
 	font-weight: lighter;
+	text-decoration: none;
 }
-.link {
+
+.clickable, .clickable a {
+	cursor: url("../src/pointer.svg") 0 0, default;
+}
+
+.clickable:active, .clickable a:active {
+	cursor: url("../src/pointer-click.svg") 0 0, default;
+}
+
+.clickable {
 	transition: transform 0.2s;
 	transition-timing-function: ease-in;
 }
-.link:hover {
+.clickable:hover {
 	transform: scale(1.1);
 	transition: transform 0.3s;
 	transition-timing-function: ease;
 }
 
-/************* BACKGROUND *****************/
+.shadow {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	top: 0px;
+	left: 0px;
+	background-color: var(--bg3);
+}
+
+/************* GRID *************/
+
+.grid {
+	display: grid;
+	grid-auto-flow: column;
+}
+
+.grid-el {
+	text-align: center;
+	width: fit-content;
+	padding: 2rem;
+}
+
+.el-img {
+	border:solid 0.5rem;
+	width: 20rem;
+	aspect-ratio: 1;
+	border-radius: 3rem;
+	overflow: hidden;
+	position: relative;
+}
+
+.el-img img {
+	max-width: 100%;
+	max-height: 100%;
+	width: auto;
+	height: auto;
+	top: 0px;
+	bottom: 0px;
+	left: 0px;
+	right: 0px;
+	margin: auto;
+	position: absolute;
+}
+
+.el-name {
+	font-size: 3rem;
+	padding: 1rem;
+}
+
+.el-desc {
+	font-size: 2rem;
+}
+
+/************* BACKGROUND *************/
 
 .bg {
 	position: absolute;
