--- a/docker/webserver/AstroAllies/css/main.css
+++ b/docker/webserver/AstroAllies/css/main.css
@@ -2,15 +2,15 @@
 	font-size: 1.4vmin;
 	background-color: var(--bg);
 	font-family: 'Comfortaa';
-	--animation-time-factor: 1.5;
 	--bg: rgb(0, 0, 21);
 	--fg: rgb(255, 255, 255);
 	--ast-size: 6rem;
 	--ast-color: #e8e8e8;
+	--ast-time-factor: 1.5;
+	--ast-delay: -10s;
 	--bg2: #000000e4;
 	--bg3: #0000005a;
 	color: var(--fg);
-	
 }
 
 /************************* MENU *************************/
@@ -62,9 +62,12 @@
 
 .element, .element a {
 	color: var(--fg);
-	font-size: 4rem;
 	font-weight: lighter;
 	text-decoration: none;
+}
+
+.element {
+	font-size: 4rem;
 }
 
 .clickable {
@@ -75,6 +78,51 @@
 	transform: scale(1.1);
 	transition: transform 0.3s;
 	transition-timing-function: ease;
+}
+
+.row {
+	display: flex;
+	justify-content: center;
+	margin-top: 2rem;
+	margin-bottom: 2rem;
+	/* box-sizing: border-box;
+	border: solid red; */
+}
+
+.row .element {
+	margin-top:auto;
+	margin-bottom:auto;
+}
+
+.row .element:first-child:not(.clickable) {
+	margin-right: 2rem;
+	margin-left: 0px;
+}
+
+.row .element:last-child:not(.clickable) {
+	margin-right: 0px;
+}
+
+.row .clickable {
+	display: flex;
+	min-width: fit-content;
+	flex: 1;
+	width: auto;
+	min-width: fit-content;
+}
+
+.row .clickable:first-child *{
+	max-width: calc(100% - 2rem);
+	margin-right: 2rem;
+}
+
+.row .clickable:last-child *{
+	max-width: calc(100% - 2rem);
+	margin-left: 2rem;
+}
+
+.row .clickable .btn, .row .clickable a {
+	width: 100%;
 }
 
 .shadow {
@@ -94,33 +142,34 @@
 }
 
 /************************* INPUTS *************************/
-.element input, .element button {
-	font-size: 5rem;
-	height: 8rem;
+.element input, .element .btn {
+	font-size: 4rem;
+	height: fit-content;
 	border-radius: 4rem;
 	padding: 0.2em;
-	padding-left: 2rem;
-	padding-right: 2rem;
+	padding-left: 0.75ch;
+	padding-right: 0.75ch;
 	text-align: center;
 }
 
-.element input[type='text'] {
-	width: 7em;
+.element input[type='text'], .element input[type='password'] {
 	font-family: 'Courier New', Courier, monospace;
 	background-color: var(--bg);
 	border: solid var(--fg) 0.5rem;
 	font-weight: bold;
 	color: var(--fg);
 	box-sizing: border-box;
+	height: 2em;
 }
 
-.element input[type='text']:focus, .element button:focus {
+.element input[type='text']:focus, .element input[type='password']:focus, .element .btn:focus {
 	outline: none;
 	border-width: 0.75rem;
 }
 
-.element button {
-	transform: scale(0.9);
+.element .btn {
+	font-size: 4rem;
+	font-family: inherit;
 	background-color: var(--bg);
 	outline: none;
 	border: solid var(--fg);
@@ -236,53 +285,53 @@
 
 .ast:nth-child(10n) {
 	right: -100vw;
-	animation-delay: 6s;
-	animation-duration: calc(11s * var(--animation-time-factor));
+	animation-delay: calc(var(--ast-delay) + 6s);
+	animation-duration: calc(11s * var(--ast-time-factor));
 }
 .ast:nth-child(10n-1) {
 	right: -80vw;
-	animation-delay: 3s;
-	animation-duration: calc(13s * var(--animation-time-factor));
+	animation-delay: calc(var(--ast-delay) + 3s);
+	animation-duration: calc(13s * var(--ast-time-factor));
 }
 .ast:nth-child(10n-2) {
 	right: -60vw;
-	animation-delay: 7s;
-	animation-duration: calc(15s * var(--animation-time-factor));
+	animation-delay: calc(var(--ast-delay) + 7s);
+	animation-duration: calc(15s * var(--ast-time-factor));
 }
 .ast:nth-child(10n-3) {
 	right: -40vw;
-	animation-delay: 0s;
-	animation-duration: calc(13s * var(--animation-time-factor));
+	animation-delay: calc(var(--ast-delay) + 0s);
+	animation-duration: calc(13s * var(--ast-time-factor));
 }
 .ast:nth-child(10n-4) {
 	right: -20vw;
-	animation-delay: 15s;
-	animation-duration: calc(11s * var(--animation-time-factor));
+	animation-delay: calc(var(--ast-delay) + 15s);
+	animation-duration: calc(11s * var(--ast-time-factor));
 }
 .ast:nth-child(10n-5) {
 	right: 0vw;
-	animation-delay: 10s;
-	animation-duration: calc(13s * var(--animation-time-factor));
+	animation-delay: calc(var(--ast-delay) + 10s);
+	animation-duration: calc(13s * var(--ast-time-factor));
 }
 .ast:nth-child(10n-6) {
 	right: 20vw;
-	animation-delay: 12s;
-	animation-duration: calc(15s * var(--animation-time-factor));
+	animation-delay: calc(var(--ast-delay) + 12s);
+	animation-duration: calc(15s * var(--ast-time-factor));
 }
 .ast:nth-child(10n-7) {
 	right: 40vw;
-	animation-delay: 4s;
-	animation-duration: calc(13s * var(--animation-time-factor));
+	animation-delay: calc(var(--ast-delay) + 4s);
+	animation-duration: calc(13s * var(--ast-time-factor));
 }
 .ast:nth-child(10n-8) {
 	right: 60vw;
-	animation-delay: 9s;
-	animation-duration: calc(11s * var(--animation-time-factor));
+	animation-delay: calc(var(--ast-delay) + 9s);
+	animation-duration: calc(11s * var(--ast-time-factor));
 }
 .ast:nth-child(10n-9) {
 	right: 80vw;
-	animation-delay: 13s;
-	animation-duration: calc(13s * var(--animation-time-factor));
+	animation-delay: calc(var(--ast-delay) + 13s);
+	animation-duration: calc(13s * var(--ast-time-factor));
 }
 
 @keyframes ast-odd {
@@ -299,31 +348,41 @@ body {
 	cursor: url("../src/cursors/default.svg") 0 0, default;
 }
 
-.clickable, .clickable a {
+.clickable, .clickable a, .clickable * {
 	cursor: url("../src/cursors/pointer.svg") 0 0, default;
 }
 
-.clickable:active, .clickable a:active {
+.clickable:active, .clickable a:active, .btn:active {
 	cursor: url("../src/cursors/pointer-click.svg") 0 0, default;
 }
 
-.element input[type='text'] {
+.element input[type='text'], .element input[type='password'] {
 	cursor: url("../src/cursors/text.svg") 0 0, default;
 }
 
 /************************* OTHERS *************************/
-.user {
+.box {
 	font-size: 3rem;
-	padding: 1rem;
-	right: 0px;
+	padding: 1.5rem;
 	position: absolute;
 	background-color: var(--bg2);
 	width: fit-content;
 	height: fit-content;
 	box-sizing: border-box;
-	border: 0.4rem solid;
-	border-radius: 1rem;
+	border: 0.4rem solid var(--fg);
+	border-radius: 2rem;
 	margin: 1rem;
+	overflow: hidden;
+}
+
+.top-right {
+	top: 0px;
+	right: 0px;
+}
+
+.top-left {
+	top: 0px;
+	left: 0px;
 }
 
 .nosel {
